[package]
name = "perry-ext-dgram"
version = "0.1.5"
edition = "2021"
license = "MIT"
description = "Native bindings for Node `dgram` (UDP datagram sockets) for the Perry TypeScript-to-native compiler. Closes PerryTS/perry#492."
repository = "https://github.com/PerryTS/dgram"
homepage = "https://github.com/PerryTS/dgram"
readme = "README.md"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
# Tracks the perry-ffi v0.5 ABI surface published from the
# `PerryTS/perry` workspace. Pinned to a git rev rather than a
# crates.io release until perry-ffi is published on crates.io.
perry-ffi = { git = "https://github.com/PerryTS/perry", branch = "main" }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "net", "macros", "io-util"] }
